# ubuntu-desktop-versions-operator

./: CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish-charm.yaml  test.yaml
src/: apache.py  charm.py  crontab  logrotate.conf  ubuntu_desktop_versions.py
src/templates/: apache-vhost.conf
tests/integration/: __init__.py  conftest.py  helpers.py  test_charm.py  test_charm_integration.py  test_ingress.py
tests/unit/: test_apache.py  test_charm.py  test_ubuntu_desktop_versions.py
