[project]
name = "ubuntu-desktop-versions-operator"
dynamic = ["version"]
requires-python = ">=3.10"

# Required group: these are all dependencies required to run the charm.
dependencies = ["ops~=3.0"]

[dependency-groups]
# Dependencies required to run all the charm's tests.
test = ["ops[testing]", "jubilant~=1.0", "pytest", "coverage[toml]", "pytest-operator"]
# Development tools for linting, formatting, and type checking.
dev = ["tox", "ruff", "codespell", "pyright"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
pythonpath = ["src", "."]

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py", "lib/**.py"]
extraPaths = ["./lib"]
